<resources>
    <string name="app_name">My Grocery List</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add first item</string>
    <string name="enter_grocery_item">Enter Grocery Item</string>
    <string name="hint_item">Enter Grocery Item</string>
    <string name="hint_quantity">Quantity</string>
    <string name="save_title">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="grocery_name">Grocery Name</string>
    <string name="quantity">Quantity</string>
    <string name="date">Date</string>
    <string name="are_you_sure">Are you sure you want to delete this item?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
