<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

            <RelativeLayout
                android:id="@+id/relativelayout_id"
                android:padding="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/enter_grocery_item"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/groceryItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:hint="@string/hint_item" />

                <EditText
                    android:id="@+id/groceryQty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/groceryItem"
                    android:layout_marginTop="15dp"
                    android:hint="@string/hint_quantity" />
                
                <Button
                    android:id="@+id/saveButton"
                    android:layout_below="@id/groceryQty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_title"
                    android:textStyle="bold"
                    android:background="@color/colorAccent"
                    android:layout_marginTop="5dp"/>

            </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>