<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:id="@+id/listRowId">

    <android.support.v7.widget.CardView
        android:id="@+id/cardviewId"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativelayout_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grocery_name"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:paddingTop="5dp"
                android:text="@string/quantity"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/dateAdded"
                android:paddingTop="5dp"
                android:text="@string/date"
                android:textStyle="italic"
                android:layout_below="@id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_alignBottom="@id/dateAdded"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/editButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_menu_edit"
                    android:layout_marginRight="15dp"/>

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_delete" />
            </TableRow>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>