<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.necohorne.mygrocerylist.Activities.DetailsActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">


            <TextView
                android:id="@+id/itemNameDET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grocery_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemQuantityDET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemNameDET"
                android:text="@string/quantity"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/itemDateDET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemQuantityDET"
                android:text="@string/date"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TableRow
                android:id="@+id/tableRowDET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_alignBottom="@id/itemDateDET">

                <Button
                    android:id="@+id/editButtonDET"
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:background="@android:drawable/ic_menu_edit"
                    android:layout_marginRight="15dp"/>

                <Button
                    android:id="@+id/deleteButtonDET"
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:background="@android:drawable/ic_delete"/>

            </TableRow>


        </RelativeLayout>


    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
